--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="green">#00e600</color>
+    <color name="red">#e60000</color>
+
+    <color name="primary">#921a48</color>
+    <color name="background">#b6215a</color>
+    <color name="onBackground">#FFFFFF</color>
+
 </resources>
