--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,20 @@
     </style>
 
     <style name="Theme.MotoGymkhana" parent="Base.Theme.MotoGymkhana" />
+
+
+    <style name="TitleTextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/onBackground</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="ValueTextView">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/onBackground</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
