--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,24 +3,100 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/background"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/low_space"
+    android:layout_marginTop="@dimen/low_space"
+    android:layout_marginEnd="@dimen/low_space"
+    android:background="@drawable/layout_bg">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/numberCardView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/usersNumberTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@color/green"
+            android:gravity="center"
+            android:padding="@dimen/low_space"
+            android:textColor="@color/white"
+            android:textSize="26sp"
+            tools:text="48" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/userTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/groupTextView"
+        app:layout_constraintStart_toEndOf="@id/numberCardView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Прохоров Алексей" />
 
     <TextView
-        android:id="@+id/timeTextView"
+        android:id="@+id/userDetailsTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/low_space"
+        android:textColor="@color/onBackground"
+        app:layout_constraintEnd_toStartOf="@+id/groupTextView"
+        app:layout_constraintStart_toEndOf="@id/numberCardView"
+        app:layout_constraintTop_toBottomOf="@+id/userTextView"
+        tools:text="D-3 Смоленск" />
+
+    <TextView
+        android:id="@+id/groupTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:padding="@dimen/low_space"
+        android:textColor="@color/onBackground"
+        app:layout_constraintEnd_toStartOf="@id/time1TextView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="D3-D2" />
+
+    <TextView
+        android:id="@+id/time1TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/low_space"
+        android:gravity="end"
+        android:minWidth="80dp"
+        android:paddingTop="@dimen/low_space"
         android:textColor="@color/onBackground"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="02:02.33" />
+
+    <TextView
+        android:id="@+id/time2TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/low_space"
+        android:gravity="end"
+        android:minWidth="80dp"
+        android:textColor="@color/onBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time1TextView"
+        tools:text="02:02.33" />
+
+    <TextView
+        android:id="@+id/time3TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/low_space"
+        android:gravity="end"
+        android:minWidth="80dp"
+        android:paddingBottom="@dimen/low_space"
+        android:textColor="@color/onBackground"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time2TextView"
+        tools:text="02:02.33" />
 </androidx.constraintlayout.widget.ConstraintLayout>
