--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="black">#FF000000</color>
     <color name="green">#00e600</color>
     <color name="red">#e60000</color>
+    <color name="yellow">#FFFF00</color>
     <color name="white">#ffffff</color>
 
     <color name="primary">#293251</color>
