--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -6,17 +6,57 @@
     android:layout_height="match_parent"
     android:background="@color/background">
 
-
-    <TextView
-        android:id="@+id/responseTextView"
+    <com.google.android.material.materialswitch.MaterialSwitch
+        android:id="@+id/switchBt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/medium_space"
-        android:text="RESPONSE"
-        android:textColor="@color/onBackground"
+        android:text="auto refresh"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switchBt">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/responseTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="response"
+                android:layout_margin="6dp"
+                android:textColor="@color/white" />
+
+<!--            <TextView-->
+<!--                android:id="@+id/responseTextView1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_margin="6dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="response"-->
+<!--                android:textColor="@color/white" />-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/retrofitTextView"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_margin="6dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="RETROFIT TEST"-->
+<!--                android:textColor="@color/white" />-->
+        </LinearLayout>
+
+
+    </ScrollView>
 
 
     <TextView
@@ -64,10 +104,10 @@
         android:layout_marginBottom="64dp"
         android:ems="10"
         android:inputType="text"
-        android:text="get"
+        android:text="temperature"
         android:textColor="@color/white"
         app:backgroundTint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/postRequestButton"
+        app:layout_constraintBottom_toTopOf="@+id/retrofitRequestButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -78,6 +118,26 @@
         android:layout_margin="@dimen/medium_space"
         android:text="POST REQUEST"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/postRequestButton1"
+        style="@style/ButtonStyle"
+        android:layout_margin="@dimen/medium_space"
+        android:text="TEST REQUEST"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/postRequestButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/retrofitRequestButton"
+        style="@style/ButtonStyle"
+        android:layout_margin="@dimen/medium_space"
+        android:visibility="gone"
+        android:text="RETROFIT"
+        app:layout_constraintBottom_toTopOf="@id/postRequestButton1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -93,5 +153,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
