--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -31,11 +31,12 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/userTextView"
+        android:id="@+id/userNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/groupTextView"
         app:layout_constraintStart_toEndOf="@id/numberCardView"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,56 +48,121 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/groupTextView"
         app:layout_constraintStart_toEndOf="@id/numberCardView"
-        app:layout_constraintTop_toBottomOf="@+id/userTextView"
+        app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
         tools:text="D-3 Смоленск" />
 
     <TextView
         android:id="@+id/groupTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="@dimen/big_space"
         android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
-        app:layout_constraintEnd_toStartOf="@id/time1TextView"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/resultTimeTextView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="D3-D2" />
 
     <TextView
-        android:id="@+id/time1TextView"
+        android:id="@+id/firstAttemptTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/low_space"
         android:gravity="end"
-        android:minWidth="80dp"
-        android:paddingTop="@dimen/low_space"
+        android:minWidth="90dp"
+        android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="02:02.33" />
 
     <TextView
-        android:id="@+id/time2TextView"
+        android:id="@+id/secondAttemptTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/low_space"
         android:gravity="end"
-        android:minWidth="80dp"
+        android:padding="@dimen/low_space"
+        android:minWidth="90dp"
         android:textColor="@color/onBackground"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time1TextView"
+        app:layout_constraintTop_toBottomOf="@+id/firstAttemptTimeTextView"
         tools:text="02:02.33" />
 
     <TextView
-        android:id="@+id/time3TextView"
+        android:id="@+id/resultTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/low_space"
         android:gravity="end"
-        android:minWidth="80dp"
+        android:padding="@dimen/low_space"
+
+        android:minWidth="90dp"
         android:paddingBottom="@dimen/low_space"
-        android:textColor="@color/onBackground"
+        android:textColor="@color/green"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time2TextView"
+        app:layout_constraintTop_toBottomOf="@+id/secondAttemptTimeTextView"
         tools:text="02:02.33" />
+
+    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+    <!--        android:id="@+id/timeMenuView"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:textColor="@color/onBackground"-->
+    <!--        android:visibility="gone"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="@+id/userDetailsTextView"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/time3TextView"-->
+    <!--        tools:visibility="visible">-->
+
+
+    <!--        <Button-->
+    <!--            android:id="@+id/button2"-->
+    <!--            style="@style/ButtonStyle"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="@dimen/medium_space"-->
+    <!--            android:minWidth="@dimen/low_space"-->
+    <!--            android:text="ЗАЧЕТ"-->
+    <!--            app:layout_constraintBottom_toTopOf="@+id/saveButton"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/textView2"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:textColor="@color/white"-->
+    <!--            android:textSize="22sp"-->
+    <!--            app:layout_constraintBottom_toBottomOf="@+id/button2"-->
+    <!--            app:layout_constraintEnd_toStartOf="@+id/button2"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="@+id/button2"-->
+    <!--            tools:text="Штраф: 1" />-->
+
+    <!--        <Button-->
+    <!--            android:id="@+id/saveButton"-->
+    <!--            style="@style/ButtonStyle"-->
+    <!--            android:layout_width="0dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="@dimen/medium_space"-->
+    <!--            android:text="@string/save"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="@+id/timeMenuView"-->
+    <!--            app:layout_constraintStart_toStartOf="@+id/timeMenuView" />-->
+
+
+    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
