--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <color name="black">#FF000000</color>
     <color name="green">#00e600</color>
@@ -10,5 +10,8 @@
     <color name="primary">#293251</color>
     <color name="background">#384266</color>
     <color name="onBackground">#85b9e8</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#fff</color>
+
 
 </resources>
