--- a/app/src/main/res/layout/fragment_stage_details.xml
+++ b/app/src/main/res/layout/fragment_stage_details.xml
@@ -6,18 +6,18 @@
     android:layout_height="match_parent"
     android:background="@color/background">
 
-    <TextView
-        android:id="@+id/stageTextView"
-        style="@style/TitleTextView"
-        android:layout_width="0dp"
-        android:layout_margin="@dimen/medium_space"
-        android:background="@drawable/layout_bg"
-        android:padding="@dimen/low_space"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/stages_title" />
+<!--    <TextView-->
+<!--        android:id="@+id/stageTextView"-->
+<!--        style="@style/TitleTextView"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_margin="@dimen/medium_space"-->
+<!--        android:background="@drawable/layout_bg"-->
+<!--        android:padding="@dimen/low_space"-->
+<!--        android:textColor="@color/white"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:text="@string/stages_title" />-->
 
     <TextView
         android:id="@+id/currentTimeTextView"
@@ -29,17 +29,133 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stageTextView"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="01:00.11" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/menuConstraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentTimeTextView" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/menuConstraintLayout"
+        android:paddingTop="@dimen/low_space"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gray"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/numberCardView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/low_space"
+            app:cardCornerRadius="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/timePicker"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/numberTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/green"
+                android:gravity="center"
+                android:minWidth="42dp"
+                android:padding="@dimen/low_space"
+                android:textColor="@color/white"
+                android:textSize="26sp"
+                tools:text="42" />
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="@dimen/low_space"
+            android:textColor="@color/onBackground"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/timePicker"
+            app:layout_constraintEnd_toStartOf="@+id/timeInputText"
+            app:layout_constraintStart_toEndOf="@+id/numberCardView"
+            app:layout_constraintTop_toTopOf="@+id/numberCardView"
+            tools:text="Прохоров Алексей " />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/timeInputText"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/low_space"
+            android:hint="time"
+            android:textColorHint="@color/onBackground"
+            app:boxStrokeColor="@color/white"
+            app:boxStrokeWidth="2dp"
+            app:hintTextColor="@color/onBackground"
+            app:layout_constraintBottom_toTopOf="@+id/timeButton"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/timeEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/onBackground"
+                tools:text="01:00.11" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.example.motogymkhana.utils.HorizontalNumberPicker
+            android:id="@+id/timePicker"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/low_space"
+            app:layout_constraintBottom_toTopOf="@+id/saveButton"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/isFailSwitch"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/low_space"
+            android:text="@string/is_fail"
+            android:textColor="@color/onBackground"
+            android:textSize="18sp"
+            android:theme="@style/MySwitch"
+            app:layout_constraintBottom_toBottomOf="@+id/timePicker"
+            app:layout_constraintEnd_toStartOf="@+id/timeButton"
+            app:layout_constraintStart_toEndOf="@+id/timePicker"
+            app:layout_constraintTop_toTopOf="@+id/timePicker"
+            tools:checked="true" />
+
+        <Button
+            android:id="@+id/timeButton"
+            style="@style/ButtonStyle"
+            android:layout_width="130dp"
+            android:layout_margin="@dimen/low_space"
+            android:layout_marginBottom="342dp"
+            android:text="@string/time"
+            app:layout_constraintBottom_toTopOf="@+id/saveButton"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/saveButton"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_margin="@dimen/low_space"
+            android:text="@string/save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -54,11 +170,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="42dp"
-        android:layout_height="42dp"
-        app:layout_constraintEnd_toEndOf="@+id/currentTimeTextView"
-        app:layout_constraintTop_toTopOf="@+id/currentTimeTextView"
-        app:srcCompat="@drawable/ic_refresh" />
+
+        <ImageView
+            android:id="@+id/timeSettingsImageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:layout_constraintEnd_toEndOf="@+id/currentTimeTextView"
+            app:layout_constraintTop_toTopOf="@+id/currentTimeTextView"
+            app:srcCompat="@drawable/ic_settings" />
 </androidx.constraintlayout.widget.ConstraintLayout>
