--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -20,14 +20,15 @@
 
         <TextView
             android:id="@+id/usersNumberTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:minWidth="42dp"
             android:background="@color/green"
             android:gravity="center"
             android:padding="@dimen/low_space"
             android:textColor="@color/white"
             android:textSize="26sp"
-            tools:text="48" />
+            tools:text="42" />
     </androidx.cardview.widget.CardView>
 
     <TextView
