--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#e60000</color>
     <color name="yellow">#FFFF00</color>
     <color name="white">#ffffff</color>
+    <color name="gray">#494949</color>
 
     <color name="primary">#293251</color>
     <color name="background">#384266</color>
